--- a/TweenSharp/TweenSharp.csproj
+++ b/TweenSharp/TweenSharp.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.0</Version>
+    <TargetFramework>net5.0</TargetFramework>
+    <Version>1.0.0</Version>
     <Authors>BerndNK</Authors>
     <Company />
     <Description>Provides an easy to use fluent API, to quickly generate tweening functions.</Description>
     <Copyright>Bernd N. Krupinski</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
 </Project>
